--- a/_posts/2015-12-24-Winter-2015.md
+++ b/_posts/2015-12-24-Winter-2015.md
@@ -2,6 +2,9 @@
 layout: post
 title: Neural Networks - Sigmoid Neurons
 ---
+
+![Neural Nets]({{ site.baseurl }}/images/nn/one.png "Neural Networks")
+
 Perceptrons were developed in 1950s and 1960s by Frank Rosenblatt, inspired by earlier works of Warren McCulloch and Walter Pitts. Perceptrons serve as the most basic types of neurons used in learning.
 
 Perceptrons can be used for universal computation, there is no logical circuit which cannot be realized using perceptron. This is essentially true as universal gates NAND and NOR can be easily implemented using perceptron. Single layer perceptrons can be used to implement basic gates like AND, NOT, OR, NAND etc. But gates like XOR need multi-layer perceptrons.
