--- a/src/articles/example-post.mdx
+++ b/src/articles/example-post.mdx
@@ -17,6 +17,10 @@ This is an example of how to write blog posts as MDX files directly in your proj
 2. Write your content in markdown
 3. Import it in `src/data/blogs.js` using the `importMDXArticle()` utility
 
+## Note Example
+
+Here is a sentence with a :note[highlighted section]{content="This is a note that appears in the sidebar! You can put **markdown** in here too."}. Click it to see the note.
+
 ## Code Example
 
 Here's some code:
@@ -53,4 +57,3 @@ greet('World');
 Copy this file, rename it, and start writing your own posts! Each post will be automatically picked up by the blog system.
 
 Happy writing! 📝
-
