--- a/src/articles/growth-framework.mdx
+++ b/src/articles/growth-framework.mdx
@@ -10,7 +10,7 @@ Here's a comprehensive framework for thinking about growth:
 
 This framework helps product managers and growth teams systematically approach user acquisition, retention, and activation through structured channels.
 
-### Key Components
+## Key Components
 
 - **R**eached: Who can you reach?
 - **A**cquired: How do you acquire them?
